Fix #62 - CSS fix not to wrap selected items...

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -72,3 +72,7 @@
   overflow: -moz-scrollbars-vertical;
 }
 */
+
+.card .Select--multi {
+  word-wrap: normal;
+}
